--- a/tools/todo/index.html
+++ b/tools/todo/index.html
@@ -4,6 +4,7 @@
     <meta charset=UTF-8>
     <meta name=viewport content='width=device-width, initial-scale=1.0'>
     <title>ToDo</title>
+    <link rel="manifest" href="./manifest.json">
     <link rel=stylesheet href=./style.css>
 </head>
 <body>
@@ -30,5 +31,8 @@
 
     <script src=./database.js></script>
     <script src=./app.js></script>
+    <script>
+        navigator.serviceWorker.register('./sw.js')
+    </script>
 </body>
 </html>
