--- a/tools/index.html
+++ b/tools/index.html
@@ -14,6 +14,7 @@
         <li><a href="./notepad">メモ帳</a></li>
         <li><a href="./gen-password">パスワード生成</a></li>
         <li><a href="./timetable">時間割</a></li>
+        <li><a href="./todo">ToDo</a></li>
     </ul>
 </body>
 </html>
