--- a/dotfiles/index.html
+++ b/dotfiles/index.html
@@ -12,6 +12,7 @@
         <li><a href="./vimrc.txt">.vimrc</a></li>
         <li><a href="./ssh-config.txt">.ssh/config</a></li>
         <li><a href="./vscode.json">VSCode</a></li>
+        <li><a href="./tmux.conf.txt">tmux</a></li>
     </ul>
 </body>
 </html>
