--- a/dotfiles/index.html
+++ b/dotfiles/index.html
@@ -8,11 +8,32 @@
 <body>
     <h1><a href="https://github.com/comame/dotfiles">comame/dotfiles</a></h1>
     <ul>
-        <li><a href="./bashrc.txt">.bashrc</a></li>
-        <li><a href="./vimrc.txt">.vimrc</a></li>
-        <li><a href="./ssh-config.txt">.ssh/config</a></li>
+        <li><a href="./.bashrc">.bashrc</a></li>
+        <li><a href="./.vimrc">.vimrc</a></li>
+        <li><a href="./.ssh/config">.ssh/config</a></li>
         <li><a href="./vscode.json">VSCode</a></li>
-        <li><a href="./tmux.conf.txt">tmux</a></li>
+        <li><a href="./.tmux.conf">.tmux.conf</a></li>
     </ul>
+    <button>Copy</button>
+    <pre><code></code></pre>
+
+    <script>
+        const output = document.querySelector('pre > code')
+        const links = Array.from(document.querySelectorAll('li > a'))
+        const copy = document.querySelector('button')
+
+        for (const link of links) {
+            link.addEventListener('click', async (e) => {
+                e.preventDefault()
+                const text = await fetch(e.target.href).then(res => res.text())
+                output.textContent = text
+            })
+        }
+
+        copy.addEventListener('click', () => {
+            document.getSelection().selectAllChildren(output)
+            document.execCommand('copy')
+        })
+    </script>
 </body>
 </html>
