--- a/dotfiles/index.html
+++ b/dotfiles/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./.bashrc">.bashrc</a></li>
         <li><a href="./.vimrc">.vimrc</a></li>
+        <li><a href="./.inputrc">.inputrc</a></li>
         <li><a href="./.ssh/config">.ssh/config</a></li>
         <li><a href="./vscode.json">VSCode</a></li>
         <li><a href="./.tmux.conf">.tmux.conf</a></li>
