--- a/dotfiles/index.html
+++ b/dotfiles/index.html
@@ -14,6 +14,7 @@
         <li><a href="./.ssh/config">.ssh/config</a></li>
         <li><a href="./vscode.json">VSCode</a></li>
         <li><a href="./.tmux.conf">.tmux.conf</a></li>
+        <li><a href="./.gitconfig">.gitconfig</a></li>
     </ul>
     <button>Copy</button>
     <pre><code></code></pre>
