--- a/tools/index.html
+++ b/tools/index.html
@@ -15,6 +15,7 @@
         <li><a href="./gen-password">パスワード生成</a></li>
         <li><a href="./timetable">時間割</a></li>
         <li><a href="./todo">ToDo</a></li>
+        <li><a href="./obs-clock">OBS Clock</a></li>
     </ul>
 </body>
 </html>
