--- a/tools/obs-clock/index.html
+++ b/tools/obs-clock/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="Clock">
-        <img src='./clock.svg'>
+        <img src='./clock.png'>
         <time id="time"></time>
     </div>
     <script src="./app.js"></script>
