--- a/tools/index.html
+++ b/tools/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWA Tools</title>
+    <title>Tools</title>
 </head>
+
 <body>
     <h1>
-        PWA Tools
+        Tools
     </h1>
     <ul>
-        <li><a href="./time">時計</a></li>
-        <li><a href="./notepad">メモ帳</a></li>
-        <li><a href="./gen-password">パスワード生成</a></li>
-        <li><a href="./timetable">時間割</a></li>
-        <li><a href="./todo">ToDo</a></li>
         <li><a href="./obs-clock">OBS Clock</a></li>
     </ul>
 </body>
+
 </html>
