--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body
-    class="min-h-screen bg-gradient-to-b from-background1 to-background2 from-50% via-[74%] to-[95%] p-16 md:p-40 relative">
+    class="min-h-screen bg-gradient-to-b from-background1 to-background2 from-50% via-[74%] to-[95%] p-16 md:p-40 relative pb-40">
     <script src="./app.js"></script>
 
     <h2 class="mt-40 text-text1 font-bold text-xl">プロフィール</h2>
