--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             link="https://pkg.go.dev/github.com/comame/readenv-go"></c-grid-item>
         <c-grid-item type="icon" icon-url="./assets/img/sg13.png" title="自宅サーバ"
             link="https://github.com/comame/kubernetes-manifests"></c-grid-item>
+        <c-grid-item type="icon" icon-url="./assets/img/ondemand-video.png" title="HLS 配信サーバ"
+            link="https://github.com/comame/livestream"></c-grid-item>
     </div>
 
     <footer class="absolute bottom-0 left-0 w-full text-center text-text2 leading-8">
