--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                 link="https://github.com/comame/kubernetes-manifests"
             ></c-grid-item>
             <c-grid-item
+                type="image"
+                image-url="./assets/img/dj.jpg"
+                title="DJ"
+                link="./assets/img/dj.jpg"
+                wide
+            ></c-grid-item>
+            <c-grid-item
                 type="icon"
                 icon-url="./assets/img/ondemand-video.png"
                 title="HLS 配信サーバ"
