--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 link="https://blog.comame.xyz"
                 wide
             ></c-grid-item>
+            <c-grid-item
+                type="icon"
+                icon-url="./assets/img/MyAnimeList_Logo.png"
+                title="MyAnimeList"
+                link="https://myanimelist.net/profile/comameito"
+            ></c-grid-item>
         </div>
 
         <h2 class="mt-40 text-text1 font-bold text-xl">つくったもの</h2>
@@ -66,12 +72,6 @@
             ></c-grid-item>
             <c-grid-item
                 type="icon"
-                icon-url="./assets/img/gopher.png"
-                title="readenv-go"
-                link="https://pkg.go.dev/github.com/comame/readenv-go"
-            ></c-grid-item>
-            <c-grid-item
-                type="icon"
                 icon-url="./assets/img/sg13.png"
                 title="自宅サーバ"
                 link="https://github.com/comame/kubernetes-manifests"
@@ -82,12 +82,6 @@
                 title="DJ"
                 link="./assets/img/dj.jpg"
                 wide
-            ></c-grid-item>
-            <c-grid-item
-                type="icon"
-                icon-url="./assets/img/ondemand-video.png"
-                title="HLS 配信サーバ"
-                link="https://github.com/comame/livestream"
             ></c-grid-item>
         </div>
 
