--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             ></c-grid-item>
             <c-grid-item
                 type="icon"
+                icon-url="./assets/img/gopher.png"
+                title="json-go"
+                link="https://pkg.go.dev/github.com/comame/json-go"
+            ></c-grid-item>
+            <c-grid-item
+                type="icon"
                 icon-url="./assets/img/sg13.png"
                 title="自宅サーバ"
                 link="https://github.com/comame/kubernetes-manifests"
