BPMカウンターを追加

--- a/tools/index.html
+++ b/tools/index.html
@@ -13,6 +13,7 @@
     </h1>
     <ul>
         <li><a href="./obs-clock">OBS Clock</a></li>
+        <li><a href="./bpm">BPM Count</a></li>
     </ul>
 </body>
 
