--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                 title="MyAnimeList"
                 link="https://myanimelist.net/profile/comameito"
             ></c-grid-item>
+            <c-grid-item
+                type="image"
+                image-url="./assets/img/dj.jpg"
+                title="DJ"
+                link="./assets/img/dj.jpg"
+                wide
+            ></c-grid-item>
         </div>
 
         <h2 class="mt-40 text-text1 font-bold text-xl">つくったもの</h2>
@@ -53,7 +60,7 @@
             <c-grid-item
                 type="image"
                 image-url="./assets/img/mynumber.png"
-                title="OpenID Connect"
+                title="ログイン"
                 link="https://accounts.comame.xyz/.well-known/openid-configuration"
                 dark-text
             ></c-grid-item>
@@ -84,10 +91,9 @@
             ></c-grid-item>
             <c-grid-item
                 type="image"
-                image-url="./assets/img/dj.jpg"
-                title="DJ"
-                link="./assets/img/dj.jpg"
-                wide
+                image-url="./assets/img/bpm-counter.png"
+                title="BPM Count"
+                link="https://comame.xyz/tools/bpm"
             ></c-grid-item>
         </div>
 
