タイマーを実装

--- a/tools/index.html
+++ b/tools/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="./obs-clock">OBS Clock</a></li>
         <li><a href="./bpm">BPM Count</a></li>
+        <li><a href="./timer">タイマー</a></li>
     </ul>
 </body>
 
