--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 type="image"
                 image-url="./assets/img/dj.jpg"
                 title="DJ"
-                link="./assets/img/dj.jpg"
+                link="https://blog.comame.xyz/tags/DJ%E3%83%AD%E3%82%B0"
                 wide
             ></c-grid-item>
         </div>
